force-app/main/default/objects/Brand_Segmentation_Approval__c/Brand_Segmentation_Approval__c.object-meta.xml
<CustomObject>
    <description>Allows the user to change the segmentation details of a brand, and then submit it for approval.</description>
    <label>Brand Segmentation Approval</label>
    <nameField>
        <displayFormat>BSA-{00000}</displayFormat>
        <label>Brand Segmentation Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Segmentation Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>