force-app/main/default/objects/Brand_Segmentation_Approval__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>The date that the record was approved</description>
    <inlineHelpText>The date that the record was approved</inlineHelpText>
    <label>Approval Date</label>
    <type>DateTime</type>
</CustomField>