force-app/main/default/objects/Brand_Segmentation_Approval__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user that this approval is assigned to</description>
    <inlineHelpText>The user that this approval is assigned to</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Brand_Segmentation_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>