force-app/main/default/objects/Brand_Segmentation_Approval__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>The brand that the segmentation approval belongs to.</description>
    <inlineHelpText>The brand that the segmentation approval belongs to</inlineHelpText>
    <label>Brand</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only a Brand can be linked to a segmentation approval record</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Brand</value>
        </filterItems>
        <infoMessage>Please select a Brand account</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brand Segmentation Approvals</relationshipLabel>
    <relationshipName>Brand_Segmentation_Approvals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>