force-app/main/default/objects/Brand_Segmentation_Approval__c/fields/Brand_Guest_Relevance__c.field-meta.xml
<CustomField>
    <fullName>Brand_Guest_Relevance__c</fullName>
    <description>The target geographic markets for the brand</description>
    <inlineHelpText>The target geographic markets for the brand</inlineHelpText>
    <label>Brand Guest Relevance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Central &amp; South America</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>Russia</fullName>
            </value>
            <value>
                <fullName>South East Asia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>