force-app/main/default/objects/Brand_Segmentation_Approval__c/fields/Brand_Segment__c.field-meta.xml
<CustomField>
    <fullName>Brand_Segment__c</fullName>
    <description>The primary market segment</description>
    <inlineHelpText>The primary market segment</inlineHelpText>
    <label>Brand Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Apparel</fullName>
            </value>
            <value>
                <fullName>Beauty &amp; Skincare</fullName>
            </value>
            <value>
                <fullName>Eyewear</fullName>
            </value>
            <value>
                <fullName>Food &amp; Drink</fullName>
            </value>
            <value>
                <fullName>Footwear</fullName>
            </value>
            <value>
                <fullName>Homewares</fullName>
            </value>
            <value>
                <fullName>Innovative Concepts</fullName>
            </value>
            <value>
                <fullName>Intimates &amp; Hosiery</fullName>
            </value>
            <value>
                <fullName>Leather Goods</fullName>
            </value>
            <value>
                <fullName>Sports &amp; Active</fullName>
            </value>
            <value>
                <fullName>Swimwear</fullName>
            </value>
            <value>
                <fullName>Tech</fullName>
            </value>
            <value>
                <fullName>Travel &amp; Luggage</fullName>
            </value>
            <value>
                <fullName>Watches &amp; Jewellery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>