force-app/main/default/objects/Brand_Segmentation_Approval__c/fields/Brand_Subsegment__c.field-meta.xml
<CustomField>
    <fullName>Brand_Subsegment__c</fullName>
    <description>The secondary market segment</description>
    <inlineHelpText>The secondary market segment</inlineHelpText>
    <label>Brand Subsegment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Books &amp; Stationary</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Baby &amp; Toddler Apparel</fullName>
            </value>
            <value>
                <fullName>Beauty Services</fullName>
            </value>
            <value>
                <fullName>Glasses</fullName>
            </value>
            <value>
                <fullName>Fast Food</fullName>
            </value>
            <value>
                <fullName>Casual Footwear</fullName>
            </value>
            <value>
                <fullName>Books &amp; Stationery</fullName>
            </value>
            <value>
                <fullName>Classroom Space</fullName>
            </value>
            <value>
                <fullName>Pyjamas and Loungewear</fullName>
            </value>
            <value>
                <fullName>Leather Goods</fullName>
            </value>
            <value>
                <fullName>Sports Apparel</fullName>
            </value>
            <value>
                <fullName>Beachwear</fullName>
            </value>
            <value>
                <fullName>Home Tech</fullName>
            </value>
            <value>
                <fullName>Travel &amp; Luggage</fullName>
            </value>
            <value>
                <fullName>Jewellery</fullName>
            </value>
            <value>
                <fullName>Children&apos;s Apparel</fullName>
            </value>
            <value>
                <fullName>Colour Cosmetics</fullName>
            </value>
            <value>
                <fullName>Sunglasses</fullName>
            </value>
            <value>
                <fullName>Kiosk</fullName>
            </value>
            <value>
                <fullName>Children&apos;s Footwear</fullName>
            </value>
            <value>
                <fullName>Cookware</fullName>
            </value>
            <value>
                <fullName>Concept Store</fullName>
            </value>
            <value>
                <fullName>Socks and Hosiery</fullName>
            </value>
            <value>
                <fullName>Sports Footwear</fullName>
            </value>
            <value>
                <fullName>Swimsuits</fullName>
            </value>
            <value>
                <fullName>Personal Tech</fullName>
            </value>
            <value>
                <fullName>Watches</fullName>
            </value>
            <value>
                <fullName>Denim</fullName>
            </value>
            <value>
                <fullName>Fragrance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>