force-app/main/default/objects/Brand_Segmentation_Approval__c/fields/Brand_VR_Positioning__c.field-meta.xml
<CustomField>
    <fullName>Brand_VR_Positioning__c</fullName>
    <description>The market position for the brand</description>
    <inlineHelpText>The market position for the brand</inlineHelpText>
    <label>Brand VR Positioning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessible</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>