force-app/main/default/objects/Brand_Segmentation_Approval__c/fields/Email_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification_Date__c</fullName>
    <description>The date that the email notification was sent</description>
    <inlineHelpText>The date that the email notification was sent</inlineHelpText>
    <label>Email Notification Date</label>
    <type>DateTime</type>
</CustomField>