force-app/main/default/objects/Brand_Segmentation_Approval__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>the status of the approval</description>
    <inlineHelpText>the status of the approval</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Requesting Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>