force-app/main/default/objects/Brand_Segmentation_Approval__c/listViews/All_Brand_Segmentation.listView-meta.xml
<ListView>
    <fullName>All_Brand_Segmentation</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Brand__c</columns>
    <columns>Brand_Segment__c</columns>
    <columns>Brand_Subsegment__c</columns>
    <columns>Brand_Gender__c</columns>
    <columns>Brand_Guest_Relevance__c</columns>
    <columns>Brand_VR_Positioning__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Brand Segmentation</label>
    <language>en_US</language>
</ListView>