force-app/main/default/objects/Brand_Segmentation_Approval__c/listViews/Pending_Approvals.listView-meta.xml
<ListView>
    <fullName>Pending_Approvals</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Brand__c</columns>
    <columns>Brand_Segment__c</columns>
    <columns>Brand_Subsegment__c</columns>
    <columns>Brand_Gender__c</columns>
    <columns>Brand_VR_Positioning__c</columns>
    <columns>Approval_Date__c</columns>
    <columns>Email_Notification_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Approvals</label>
    <language>en_US</language>
</ListView>